--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,70 @@
-aiohttp==3.8.4
+aiohttp==3.8.5
+aiohttp-retry==2.8.3
 aiosignal==1.3.1
-async-timeout==4.0.2
+annotated-types==0.5.0
+async-timeout==4.0.3
 attrs==23.1.0
+blinker==1.6.2
 Brotli==1.0.9
-certifi==2022.12.7
-charset-normalizer==3.1.0
-colorama==0.4.6
-edge-tts==6.1.3
-ffmpeg-python==0.2.0
-filelock==3.12.0
-frozenlist==1.3.3
-future==0.18.3
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+cryptography==41.0.3
+decorator==4.4.2
+emoji==2.7.0
+exceptiongroup==1.1.2
+fake-useragent==1.2.1
+ffmpeg==1.4
+frozenlist==1.4.0
+gmail==0.6.3
+greenlet==2.0.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 idna==3.4
-importlib-metadata==6.6.0
-Jinja2==3.1.2
-llvmlite==0.39.1
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-mdurl==0.1.2
-more-itertools==9.1.0
-mpmath==1.3.0
+imageio==2.31.1
+imageio-ffmpeg==0.4.8
+kaitaistruct==0.10
+moviepy==1.0.3
 multidict==6.0.4
-mutagen==1.46.0
-networkx==3.1
-numba==0.56.4
-numpy==1.23.5
-openai-whisper==20230314
-Pillow==9.3.0
-pycryptodomex==3.17
-Pygments==2.15.1
+notifypy==1.0.3.0
+numpy==1.25.2
+outcome==1.2.0
+packaging==23.1
+Pillow==10.0.0
+playwright==1.36.0
+proglog==0.1.10
+pyaes==1.6.1
+pyasn1==0.5.0
+pycparser==2.21
+pydantic==2.1.1
+pydantic_core==2.4.0
+pyee==9.0.4
+PyJWT==2.8.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+Pyrogram==2.0.106
+PySocks==1.7.1
 python-dotenv==1.0.0
-regex==2023.3.23
-requests==2.29.0
-rich==13.3.5
-sympy==1.11.1
-stable-ts==2.5.3
-tiktoken==0.3.1
-torch==2.0.0+cu117
-torchaudio==2.0.1+cu117
-torchvision==0.15.1+cu117
-tqdm==4.65.0
-typing_extensions==4.5.0
-urllib3==1.26.15
-websockets==11.0.2
+pytz==2023.3
+requests==2.31.0
+selenium==4.11.2
+selenium-wire==5.1.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+TgCrypto==1.2.5
+tiktok-uploader==1.0.1
+TikTokApi==6.0.1
+tiktokapipy==0.2.3
+toml==0.10.2
+tqdm==4.66.1
+trio==0.22.2
+trio-websocket==0.10.3
+twilio==8.5.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+webdriver-manager==4.0.0
+wsproto==1.2.0
 yarl==1.9.2
-yt-dlp==2023.3.4
-zipp==3.15.0
+zstandard==0.21.0
