--- a/code/.env.example
+++ b/code/.env.example
@@ -1,2 +1,8 @@
 OPEN_AI_APIKEY = <API-KEY>
 PROXY6_API_KEY = <API-KEY>
+
+MYSQL_HOST = "<IP>"
+MYSQL_PORT = "<PORT>"
+MYSQL_USER = "<USERNAME>"
+MYSQL_PASS = "<PASSWORD>"
+MYSQL_NAME = "<DATABASE-NAME>"
