--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
+colorama==0.4.6
 cryptography==41.0.3
 decorator==4.4.2
 emoji==2.7.0
@@ -26,8 +27,10 @@ idna==3.4
 imageio==2.31.1
 imageio-ffmpeg==0.4.8
 kaitaistruct==0.10
+keyboard==0.13.5
 moviepy==1.0.3
 multidict==6.0.4
+mysql-connector==2.2.9
 notifypy==1.0.3.0
 numpy==1.25.2
 outcome==1.2.0
@@ -41,6 +44,7 @@ pycparser==2.21
 pydantic==2.1.1
 pydantic_core==2.4.0
 pyee==9.0.4
+pyfiglet==0.8.post1
 PyJWT==2.8.0
 pyOpenSSL==23.2.0
 pyparsing==3.1.1
@@ -51,6 +55,7 @@ pytz==2023.3
 requests==2.31.0
 selenium==4.11.2
 selenium-wire==5.1.0
+simple-term-menu==1.6.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 TgCrypto==1.2.5
